--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
                 <a href="#" class="btn-app"><img src="android%20app%20store.png"
                         alt="store for downloading then apps"></a>
-                <a href="#" class="btn-app"><img src="%20app%20store.png" alt="store for downloading then apps"></a>
+                <a href="#" class="btn-app"><img src="i%20app%20store.png" alt="store for downloading then apps"></a>
             </div>
         </div>
     </section>
