--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     I compared all big players like Netmeds, PharmEasy, Marwah Medicals, etc. and among them Marwah
                     Medicals look to be
                     best in pricing and delivery.
-                    <cite><img src="resources/customer-1.jpg alt=" customer-1 ">Vismay Agarwal</cite>
+                    <cite><img src="customer-1.jpg" alt=" customer-1 ">Vismay Agarwal</cite>
                 </blockquote>
             </div>
             <div class=" col span-1-of-3">
@@ -252,7 +252,7 @@
                             MM then you will get 20 to 25% discount on your bill with MM
                             promo codes,
                             which is huge.
-                            <cite><img src="resources/customer-2.jpg alt=" customer-2 ">Satyam Saw</cite>
+                            <cite><img src="customer-2.jpg" alt=" customer-2 ">Satyam Saw</cite>
                 </blockquote>
             </div>
             <div class=" col span-1-of-3">
@@ -265,7 +265,7 @@
                                     users by providing
                                     huge discount on medicines.<br>
                                     “I will recommend you to try at least once”
-                                    <cite><img src="resources/customer-3.jpg alt=" customer-3 ">Shakib Shaikh</cite>
+                                    <cite><img src="customer-3.jpg" alt=" customer-3 ">Shakib Shaikh</cite>
                 </blockquote>
             </div>
         </div>
